<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/vacancyIconBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                android:layout_marginEnd="8dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_eye"
                android:layout_marginEnd="16dp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_share"
                android:layout_marginEnd="16dp" />

            <ImageView
                android:id="@+id/vacancyIconFavorite"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_favourites" />
        </LinearLayout>

        <TextView
            android:id="@+id/vacancyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            tool:text="Название вакансии"
            style="@style/Title1"
            />

        <TextView
            android:id="@+id/vacancySalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tool:text="Уровень дохода"
            style="@style/Text1"
            />

        <TextView
            android:id="@+id/vacancyExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tool:text="Требуемый опыт"
            style="@style/Text1"
            />

        <TextView
            android:id="@+id/vacancySchedules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            tool:text="Занятость"
            style="@style/Text1"
            />

        <LinearLayout
            android:id="@+id/vacancyRespondedPeopleBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/btn_rounded_green_bg_disabled"
                >

                <TextView
                    android:id="@+id/vacancyRespondingPeopleText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    tool:text="147 человек уже откликнулись"
                    style="@style/Text1"
                    />
                
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_response_on_circle"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vacancyWatchingPeopleBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/btn_rounded_green_bg_disabled"
                >

                <TextView
                    android:id="@+id/vacancyWatchingPeopleText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    tool:text="2 человека сейчас смотрят"
                    style="@style/Text1"
                    />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_eye_on_circle"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/placeholder_bg"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vacancyCompany"
                    style="@style/Title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="Фирма" />

                <ImageView
                    android:id="@+id/vacancyCheck"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_check_mark"
                    app:tint="@color/grey_3" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/sample_map_yandex" />

            <TextView
                android:id="@+id/vacancyLocation"
                style="@style/Text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tool:text="Город, улица, дом" />
        </LinearLayout>

        <TextView
            android:id="@+id/vacancyDescription"
            style="@style/Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tool:text="Огромный текст с описание локации" />

        <TextView
            style="@style/Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/your_tasks" />

        <TextView
            android:id="@+id/vacancyResponsibilities"
            style="@style/Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tool:text="Огромный текст с описание задач" />

        <TextView
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ask_employer_question" />

        <TextView
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey_3"
            android:text="@string/employer_will_receive" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vacanciesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tool:listitem="@layout/view_question_item" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/vacancyApplyButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/apply_now"
            android:enabled="true"
            style="@style/BtnBigGreen" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
